  the 'sit' command.
- The 'sit' command no longer modifies any config options.
- Location-based partySkills should target better now.
- teleportAuto_portal will now be temporarily disabled during autoStorage,
  autoSell and autoBuy.
- Fixed a variable clash bug in useSelf_skill (useSelf_skill_smartHeal code)
  which causes equip_* options not work

New features:
- dcOnDisconnect 2 will not disconnect when you run out of paid time
  now, because this is an intermittent error condition that happens on
  some buggy private servers.
- Added 'manual' AI mode, so you can still use most console commands while
  automatic AI is off.
- An empty adminPassword disables all authentication schemes to control Kore
- Manual move commands (east, west, north, south, etc) now take an optional
  'distance' parameter.
- Response list for refining equipments now displays correct item names
- shop.txt parser will complain if you try to vend more than 30,000 of an
  item. (Usually happens if you got price and quantity mixed up, which
  is bad for you since you'd be selling items way cheap.)
- Support for new Episode 10.2 skills
- teleportAuto_allPlayers 2 will prevent you from teleporting away from your
  party unless there are other non-party players around.

New config options:
- autoMoveOnDeath set:
	autoMoveOnDeath <0/1>
	autoMoveOnDeath_x <INT>
	autoMoveOnDeath_y <INT>
	autoMoveOnDeath_map <MAP>
- serverEncoding
  Specifies the server's character encoding (language). Should be one of:
     Western
     Tagalog
     Chinese
     Korean
     Russian
     Cyrillic
     Japanese
     Thai
- New checkSelfCondition _whenEquipped <item>. True iff the named item
  is equipped.
- debugPacket_received 3 will print what openkore interpreted each parameter
  in the packet as.
- XKore 2: (manual at http://openkore.sourceforge.net/manual/xkore2.php )
	XKore_ID
	XKore_publicIp
	XKore_listenIp
	XKore_listenPort
- removeActorWithDistance
- route_randomWalk_inTown